feat: add HeaderComponent with styling and links for Figma and GitHub in Button documentation

--- a/packages/react/src/components/button/Button.mdx
+++ b/packages/react/src/components/button/Button.mdx
@@ -1,10 +1,15 @@
 import { Meta } from "@storybook/blocks";
 import React from "react";
 import StorybookTabs from "../../../.storybook/template/StorybookTabs";
+import HeaderComponent from "../../../.storybook/template/HeaderComponent";
 
 <Meta title="Components/Button" />
 
-# Button
+<HeaderComponent title="Button" linkFigma="https://www.figma.com/design/Wiy8uWsWjoagf95lOmPXNU/01.0-Design-System-RTE---WEB?node-id=1-150&p=f&m=dev" linkGithub="https://github.com/rte-france/design-system-rte/tree/main/packages/react/src/components/button">
+
+<p>Un bouton est un élément interactif d’une interface utilisateur qui permet aux utilisateurs d’effectuer une action, comme soumettre un formulaire, ouvrir une fenêtre ou déclencher un événement. Il est généralement représenté par un texte, une icône ou une combinaison des deux.</p>
+
+</HeaderComponent>
 
 <StorybookTabs> 
 
