--- a/packages/design-docs/stories/Couleurs.mdx
+++ b/packages/design-docs/stories/Couleurs.mdx
@@ -4,9 +4,9 @@ import "../src/styles/Police.css";
 
 <Meta title="Design systems/Couleurs" />
 
-# Les couleurs sémantiques
+<h1 style={{fontFamily:"Nunito"}}> Les couleurs sémantiques </h1>
 
-<h2 className="titleH2" style={{border:"none"}}> Définition </h2>
+<h2 style={{border:"none", fontFamily:"Nunito"}}> Définition </h2>
 
 Une première valeur HEX est attribuée à ce que l’on appelle une "couleur primitive". Ensuite, une signification est associée à cette couleur, ce qui en fait une "couleur sémantique". Par exemple, cela peut être la couleur par défaut d'un arrière-plan. C'est cette couleur sémantique qui peut être utilisée pour des éléments comme l’arrière-plan d’un bouton.
 
@@ -14,7 +14,7 @@ L'exemple ci-dessous illustre bien ce concept :
 
 <img src="/Exemple.png" width="100%" />
 
-<h2 className="titleH2" style={{border:"none"}}> Brands et modes </h2>
+<h2 style={{border:"none", fontFamily:"Nunito"}}> Brands et modes </h2>
 
 Une première valeur HEX est attribuée à ce que l’on appelle une "couleur primitive". Ensuite, une signification est associée à cette couleur, ce qui en fait une "couleur sémantique". Par exemple, cela peut être la couleur par défaut d'un arrière-plan. C'est cette couleur sémantique qui peut être utilisée pour des éléments comme l’arrière-plan d’un bouton.
 
@@ -39,7 +39,7 @@ Ainsi, la couleur d’un composant, d’un texte ou d’un élément d’interfa
 
 <img src="/Modes.png" width="100%" />
 
-<h2 className="titleH2" style={{border:"none"}}> Choix des couleurs </h2>
+<h2 style={{border:"none", fontFamily:"Nunito"}}> Choix des couleurs </h2>
 
 Les conversions de couleurs entre les "brands" et les thèmes sont gérées à l’aide des Design Tokens.
 
@@ -51,7 +51,7 @@ Ainsi, si une couleur primitive est modifiée, cette modification se répercute 
 
 <img src="/ColorChoice.png" width="100%" />
 
-<h2 className="titleH2" style={{border:"none"}}> Dénomination </h2>
+<h2 style={{border:"none"}}> Dénomination </h2>
 
 Les noms des couleurs sémantiques sont construits selon le schéma suivant :
 
