fix: added tsx comprehension in angular storybook

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/button/button.mdx
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/button/button.mdx
@@ -1,7 +1,6 @@
-import SimpleComponent from './test';
 import HeaderComponent from "../../../../../../.storybook/template/HeaderComponent/HeaderComponent";
+import IconTitle from "../../../../../../.storybook/template/IconTitle/IconTitle";
 
-# Doc Bouton
-
-<SimpleComponent title="Mon bouton" text="Ceci est un bouton" />
 <HeaderComponent title="Button" linkFigma="https://www.figma.com/design/Wiy8uWsWjoagf95lOmPXNU/01.0-Design-System-RTE---WEB?node-id=1-150&p=f&m=dev" linkGithub="https://github.com/rte-france/design-system-rte/tree/main/packages/react/src/components/button" />
+
+<IconTitle title="Button" icon="heart_filled" />
