refactor: update UtilisationExemple component to use img prop instead of imgPath; remove placeholder image

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/button/button.mdx
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/button/button.mdx
@@ -53,9 +53,9 @@ import placeholderImg from "./img/placeholder_img.png";
 
 <div style={{ display: "flex", flexDirection: "row", justifyContent: "space-between", alignItems: "center"}}>
 
-<UtilisationExemple toDo={true} imgPath="placeholder_img.png" />
+<UtilisationExemple toDo={true} img={placeholderImg} />
 
-<UtilisationExemple toDo={false} imgPath="placeholder_img.png" />
+<UtilisationExemple toDo={false} img={placeholderImg} />
 
 </div>
 
