--- a/preview/storybook-component-page-angular/angular/components/button/button.mdx
+++ b/preview/storybook-component-page-angular/angular/components/button/button.mdx
@@ -53,9 +53,9 @@ import placeholderImg from "./img/placeholder_img.png";
 
 <div style={{ display: "flex", flexDirection: "row", justifyContent: "space-between", alignItems: "center"}}>
 
-<UtilisationExemple toDo={true} imgPath="placeholder_img.png" />
+<UtilisationExemple toDo={true} img={placeholderImg} />
 
-<UtilisationExemple toDo={false} imgPath="placeholder_img.png" />
+<UtilisationExemple toDo={false} img={placeholderImg} />
 
 </div>
 
