--- a/packages/react/src/components/button/Button.mdx
+++ b/packages/react/src/components/button/Button.mdx
@@ -22,32 +22,32 @@ import IconTitle from "../../../.storybook/template/IconTitle/IconTitle";
         <Usage title="Bouton">
 
     <div>
-        <h4> Déclencher une action </h4>
+        <h4 tabIndex={0}> Déclencher une action </h4>
 
-        <p> Validation, soumission, ouverture d’une modale, navigation, etc. </p>
+        <p tabIndex={0}> Validation, soumission, ouverture d’une modale, navigation, etc. </p>
     </div>
 
     <div>
-        <h4> Guider l’utilisateur </h4>
+        <h4 tabIndex={0}> Guider l’utilisateur </h4>
 
-        <p> Appeler à une action principale ("S'inscrire", "Acheter", "Envoyer"). </p>
+        <p tabIndex={0}> Appeler à une action principale ("S'inscrire", "Acheter", "Envoyer"). </p>
     </div>
 
     <div>
-        <h4> Interagir avec une interface </h4>
+        <h4 tabIndex={0}> Interagir avec une interface </h4>
 
-        <p> Activation/désactivation, chargement, confirmation d’une tâche. </p>
+        <p tabIndex={0}> Activation/désactivation, chargement, confirmation d’une tâche. </p>
     </div>
 
 </Usage>
 
 <IconTitle title="Exemples d'utilisation" icon="heart" />
 
-- 1 mot → "Envoyer"
-- 2 mots → "Ajouter au panier"
-- 3 mots max → "Créer un compte"
+- <p tabIndex={0}> 1 mot → "Envoyer" </p>
+- <p tabIndex={0}> 2 mots → "Ajouter au panier" </p>
+- <p tabIndex={0}> 3 mots max → "Créer un compte" </p>
 
-**Si un bouton nécessite plus de 3 mots, envisagez une reformulation plus concise.**
+<b tabIndex={0}>Si un bouton nécessite plus de 3 mots, envisagez une reformulation plus concise.</b>
 
 
 <div style={{ display: "flex", flexDirection: "row", justifyContent: "space-between", alignItems: "center"}}>
@@ -58,7 +58,7 @@ import IconTitle from "../../../.storybook/template/IconTitle/IconTitle";
 
 </div>
 
-    <img src="/placeholder_img.png" alt="Exemple de bouton" style={{ width: "100%", margin: "2rem auto", display: "block" }} />
+    <img tabIndex={0} src="/placeholder_img.png" alt="Exemple de bouton" style={{ width: "100%", margin: "2rem auto", display: "block" }} />
 
     </div>
 
