--- a/preview/image-display-stories/angular/components/button/stories/button.mdx
+++ b/preview/image-display-stories/angular/components/button/stories/button.mdx
@@ -1,10 +1,10 @@
 import { Meta } from "@storybook/blocks";
 
-import HeaderComponent from "../../../../../../.storybook/template/HeaderComponent/HeaderComponent";
-import IconTitle from "../../../../../../.storybook/template/IconTitle/IconTitle";
-import Usage from "../../../../../../.storybook/template/Usage/Usage";
-import UtilisationExemple from "../../../../../../.storybook/template/UtilisationExemple/UtilisationExemple";
-import StorybookTabs from "../../../../../../.storybook/template/StorybookTabs";
+import HeaderComponent from "../../../../../../../.storybook/template/HeaderComponent/HeaderComponent";
+import IconTitle from "../../../../../../../.storybook/template/IconTitle/IconTitle";
+import Usage from "../../../../../../../.storybook/template/Usage/Usage";
+import UtilisationExemple from "../../../../../../../.storybook/template/UtilisationExemple/UtilisationExemple";
+import StorybookTabs from "../../../../../../../.storybook/template/StorybookTabs";
 
 import placeholderImg from "./img/placeholder_img.png";
 
