--- a/preview/image-display-stories/angular/components/button/stories/button.mdx
+++ b/preview/image-display-stories/angular/components/button/stories/button.mdx
@@ -12,7 +12,7 @@ import placeholderImg from "./img/placeholder_img.png";
 
 <HeaderComponent title="Button" linkFigma="https://www.figma.com/design/Wiy8uWsWjoagf95lOmPXNU/01.0-Design-System-RTE---WEB?node-id=1-150&p=f&m=dev" linkGithub="https://github.com/rte-france/design-system-rte/tree/main/packages/angular/projects/ds-rte-lib/src//lib/components/button">
 
-<p tabIndex={0}>Un bouton est un élément interactif d’une interface utilisateur qui permet aux utilisateurs d’effectuer une action, comme soumettre un formulaire, ouvrir une fenêtre ou déclencher un événement. Il est généralement représenté par un texte, une icône ou une combinaison des deux.</p>
+<p >Un bouton est un élément interactif d’une interface utilisateur qui permet aux utilisateurs d’effectuer une action, comme soumettre un formulaire, ouvrir une fenêtre ou déclencher un événement. Il est généralement représenté par un texte, une icône ou une combinaison des deux.</p>
 
 </HeaderComponent>
 
@@ -23,32 +23,32 @@ import placeholderImg from "./img/placeholder_img.png";
         <Usage title="Bouton">
 
     <div>
-        <h4 tabIndex={0}> Déclencher une action </h4>
+        <h4 > Déclencher une action </h4>
 
-        <p tabIndex={0}> Validation, soumission, ouverture d’une modale, navigation, etc. </p>
+        <p > Validation, soumission, ouverture d’une modale, navigation, etc. </p>
     </div>
 
     <div>
-        <h4 tabIndex={0}> Guider l’utilisateur </h4>
+        <h4 > Guider l’utilisateur </h4>
 
-        <p tabIndex={0}> Appeler à une action principale ("S'inscrire", "Acheter", "Envoyer"). </p>
+        <p > Appeler à une action principale ("S'inscrire", "Acheter", "Envoyer"). </p>
     </div>
 
     <div>
-        <h4 tabIndex={0}> Interagir avec une interface </h4>
+        <h4 > Interagir avec une interface </h4>
 
-        <p tabIndex={0}> Activation/désactivation, chargement, confirmation d’une tâche. </p>
+        <p > Activation/désactivation, chargement, confirmation d’une tâche. </p>
     </div>
 
 </Usage>
 
 <IconTitle title="Exemples d'utilisation" icon="heart_outlined" />
 
-- <p tabIndex={0}> 1 mot → "Envoyer" </p>
-- <p tabIndex={0}> 2 mots → "Ajouter au panier" </p>
-- <p tabIndex={0}> 3 mots max → "Créer un compte" </p>
+- <p > 1 mot → "Envoyer" </p>
+- <p > 2 mots → "Ajouter au panier" </p>
+- <p > 3 mots max → "Créer un compte" </p>
 
-<b tabIndex={0}>Si un bouton nécessite plus de 3 mots, envisagez une reformulation plus concise.</b>
+<b >Si un bouton nécessite plus de 3 mots, envisagez une reformulation plus concise.</b>
 
 
 <div style={{ display: "flex", flexDirection: "row", justifyContent: "space-between", alignItems: "center"}}>
@@ -59,25 +59,25 @@ import placeholderImg from "./img/placeholder_img.png";
 
 </div>
 
-    <img tabIndex={0} src={placeholderImg} alt="Exemple de bouton" style={{ width: "100%", margin: "2rem auto", display: "block" }} />
+    <img  src={placeholderImg} alt="Exemple de bouton" style={{ width: "100%", margin: "2rem auto", display: "block" }} />
 
     </div>
 
     <div className="Guidelines">
 
-        <p tabIndex={0}> Guidelines </p>
+        <p > Guidelines </p>
 
     </div>
 
     <div className="Code">
 
-        <p tabIndex={0}> Code </p>
+        <p > Code </p>
 
     </div>
 
     <div className="Accessibility">
 
-        <p tabIndex={0}> Accessibility </p>
+        <p > Accessibility </p>
 
     </div>
 
