--- a/packages/react/src/components/button/Button.mdx
+++ b/packages/react/src/components/button/Button.mdx
@@ -7,6 +7,8 @@ import Usage from "../../../.storybook/template/Usage/Usage";
 import UtilisationExemple from "../../../.storybook/template/UtilisationExemple/UtilisationExemple";
 import IconTitle from "../../../.storybook/template/IconTitle/IconTitle";
 
+import Placeholder from "./img/placeholder_img.png"
+
 <Meta title="Components/Button" />
 
 <HeaderComponent title="Button" linkFigma="https://www.figma.com/design/Wiy8uWsWjoagf95lOmPXNU/01.0-Design-System-RTE---WEB?node-id=1-150&p=f&m=dev" linkGithub="https://github.com/rte-france/design-system-rte/tree/main/packages/react/src/components/button">
@@ -52,13 +54,13 @@ import IconTitle from "../../../.storybook/template/IconTitle/IconTitle";
 
 <div style={{ display: "flex", flexDirection: "row", justifyContent: "space-between", alignItems: "center"}}>
 
-<UtilisationExemple toDo={true} imgPath="/placeholder_img.png" />
+<UtilisationExemple toDo={true} img={Placeholder} />
 
-<UtilisationExemple toDo={false} imgPath="/placeholder_img.png" />
+<UtilisationExemple toDo={false} img={Placeholder} />
 
 </div>
 
-    <img tabIndex={0} src="/placeholder_img.png" alt="Exemple de bouton" style={{ width: "100%", margin: "2rem auto", display: "block" }} />
+    <img tabIndex={0} src={Placeholder} alt="Exemple de bouton" style={{ width: "100%", margin: "2rem auto", display: "block" }} />
 
     </div>
 
