--- a/packages/react/src/components/button/stories/Button.mdx
+++ b/packages/react/src/components/button/stories/Button.mdx
@@ -1,11 +1,11 @@
 import { Meta } from "@storybook/blocks";
 import React from "react";
 
-import StorybookTabs from "../../../.storybook/template/StorybookTabs";
-import HeaderComponent from "../../../.storybook/template/HeaderComponent/HeaderComponent";
-import Usage from "../../../.storybook/template/Usage/Usage";
-import UtilisationExemple from "../../../.storybook/template/UtilisationExemple/UtilisationExemple";
-import IconTitle from "../../../.storybook/template/IconTitle/IconTitle";
+import StorybookTabs from "../../../../.storybook/template/StorybookTabs";
+import HeaderComponent from "../../../../.storybook/template/HeaderComponent/HeaderComponent";
+import Usage from "../../../../.storybook/template/Usage/Usage";
+import UtilisationExemple from "../../../../.storybook/template/UtilisationExemple/UtilisationExemple";
+import IconTitle from "../../../../.storybook/template/IconTitle/IconTitle";
 
 import Placeholder from "./img/placeholder_img.png"
 
