feat(design-docs): add elevation, grid, spacing and typography documentation to the storybook

--- a/packages/design-docs/stories/Couleurs.mdx
+++ b/packages/design-docs/stories/Couleurs.mdx
@@ -8,7 +8,7 @@ import Modes from "../src/img/couleurs/Modes.png";
 import ColorChoice from "../src/img/couleurs/ColorChoice.png";
 import Denomination from "../src/img/couleurs/Denomination.png";
 
-<Meta title="Design systems/Couleurs" />
+<Meta title="Design system/Couleurs" />
 
 <h1 style={{fontFamily:"Nunito"}}> Les couleurs sémantiques </h1>
 
