--- a/packages/design-docs/stories/Grids.mdx
+++ b/packages/design-docs/stories/Grids.mdx
@@ -10,7 +10,7 @@ import PanneauxLateraux from "../src/img/grids/PanneauxLateraux.png";
 
 import "../src/styles/Police.css";
 
-<Meta title="Design systems/Grids" />
+<Meta title="Design system/Grids" />
 
 <h1 id="grids" style={{fontFamily:"Nunito"}}> Grids </h1>
 
