--- a/packages/design-docs/stories/Introduction.mdx
+++ b/packages/design-docs/stories/Introduction.mdx
@@ -4,7 +4,7 @@ import Header from "../src/components/Header";
 import MainContent from "../src/components/MainContent";
 import Footer from "../src/components/Footer";
 
-<Meta title="Design systems" />
+<Meta title="Design system/Introduction" />
 
 <Header />
 <MainContent />
