--- a/packages/design-docs/stories/Spacing.mdx
+++ b/packages/design-docs/stories/Spacing.mdx
@@ -7,15 +7,13 @@ import SpacingCard from "../src/img/spacing/SpacingCard.png"
 
 import "../src/styles/Police.css"
 
-<Meta title="Design Systems/Spacing" />
+<Meta title="Design System/Spacing" />
 
 <h1 id="spacing" style={{fontFamily:"Nunito"}}> Spacing </h1>
 
 <h2 id="definition-spacing" style={{border:"none", fontFamily:"Nunito"}}> Qu'est ce que le spacing </h2>
 
 <p> L’<b>espacement</b>, ou <b>spacing</b>, désigne l’espace entre les textes, images, boutons et autres éléments de l’interface. Il joue un rôle clé dans l’harmonie visuelle, la lisibilité et l’ergonomie des expériences que vous concevez. </p>
-
-{/* TODO : RAJOUTER LA BONNE IMAGE LA PREMIERE DU SPACING */}
 
 <h2 id="base-huit-pixel" style={{border:"none", fontFamily:"Nunito"}}> Base de 8 pixels </h2>
 
