--- a/packages/design-docs/stories/Typography.mdx
+++ b/packages/design-docs/stories/Typography.mdx
@@ -7,7 +7,7 @@ import SupportExemple from "../src/img/typography/SupportExemple.png"
 
 import "../src/styles/Police.css"
 
-<Meta title="Design systems/Typographies"/>
+<Meta title="Design system/Typographies"/>
 
 <h1 id="typography" style={{fontFamily:"Nunito"}}> Typographies sémantiques </h1>
 
