--- a/packages/design-docs/stories/Bordures.mdx
+++ b/packages/design-docs/stories/Bordures.mdx
@@ -7,7 +7,7 @@ import TableauDenominationBorderWidth from "../src/img/bordures/TableauDenominat
 
 import "../src/styles/Police.css";
 
-<Meta title="Design systems/Bordures" />
+<Meta title="Design system/Bordures" />
 
 <h1 id="bordures" style={{fontFamily:"Nunito"}}> Les bordures </h1>
 
