--- a/packages/react/src/components/button/stories/Button.mdx
+++ b/packages/react/src/components/button/stories/Button.mdx
@@ -21,27 +21,27 @@ import Placeholder from "./img/placeholder_img.png"
 
     <div className="Overview">
 
-        <Usage title="Bouton">
+        <h2> Bouton </h2>
 
     <div>
-        <h4 > Déclencher une action </h4>
+        <h3 > Déclencher une action </h3>
 
         <p > Validation, soumission, ouverture d’une modale, navigation, etc. </p>
     </div>
 
     <div>
-        <h4 > Guider l’utilisateur </h4>
+        <h3 > Guider l’utilisateur </h3>
 
         <p > Appeler à une action principale ("S'inscrire", "Acheter", "Envoyer"). </p>
     </div>
 
     <div>
-        <h4 > Interagir avec une interface </h4>
+        <h3 > Interagir avec une interface </h3>
 
         <p > Activation/désactivation, chargement, confirmation d’une tâche. </p>
     </div>
 
-</Usage>
+
 
 <IconTitle title="Exemples d'utilisation" icon="heart" />
 
@@ -67,12 +67,6 @@ import Placeholder from "./img/placeholder_img.png"
     <div className="Guidelines">
 
         <p> Guidelines </p>
-
-    </div>
-
-    <div className="Code">
-
-        <p> Code </p>
 
     </div>
 
