--- a/packages/angular/projects/ds-rte-lib/src/lib/components/badge/stories/badge.mdx
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/badge/stories/badge.mdx
@@ -14,7 +14,7 @@ import Accessibility from "../../../../../../../../core/components/badge/stories
 
 import "../../../../../../../.storybook/template/style/police.css";
 
-<Meta title="Components/Badge" />
+<Meta title="Composants/Badge" />
 
 <HeaderComponent title="Badge" linkFigma="https://www.figma.com/design/Wiy8uWsWjoagf95lOmPXNU/01.0-Design-System-RTE---WEB?node-id=1712-2202&p=f&m=dev" linkGithub="https://github.com/rte-france/design-system-rte/tree/main/packages/react/src/components/badge"  />
 
