feat(storybook-badge): add Badge component stories and documentation for angular and update styles and structure for consistency

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/badge/stories/badge.mdx
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/badge/stories/badge.mdx
@@ -1,19 +1,18 @@
 import { Meta } from "@storybook/blocks";
-import React from "react";
 
-import StorybookTabs from "../../../../.storybook/template/StorybookTabs";
-import HeaderComponent from "../../../../.storybook/template/HeaderComponent/HeaderComponent";
+import StorybookTabs from "../../../../../../../.storybook/template/StorybookTabs";
+import HeaderComponent from "../../../../../../../.storybook/template/HeaderComponent/HeaderComponent";
 
-import BadgeTypes from "../../../../../core/components/badge/stories/img/BadgeTypes.png"
-import Taille from "../../../../../core/components/badge/stories/img/Taille.png"
-import TextOptions from "../../../../../core/components/badge/stories/img/TextOptions.png"
-import OtherComponent from "../../../../../core/components/badge/stories/img/OtherComponent.png"
-import StructureComposant from "../../../../../core/components/badge/stories/img/StructureComposant.png"
-import TableOfOptions from "../../../../../core/components/badge/stories/img/TableOfOptions.png"
-import Layout from "../../../../../core/components/badge/stories/img/Layout.png"
-import Accessibility from "../../../../../core/components/badge/stories/img/Accessibility.png"
+import BadgeTypes from "../../../../../../../../core/components/badge/stories/img/BadgeTypes.png"
+import Taille from "../../../../../../../../core/components/badge/stories/img/Taille.png"
+import TextOptions from "../../../../../../../../core/components/badge/stories/img/TextOptions.png"
+import OtherComponent from "../../../../../../../../core/components/badge/stories/img/OtherComponent.png"
+import StructureComposant from "../../../../../../../../core/components/badge/stories/img/StructureComposant.png"
+import TableOfOptions from "../../../../../../../../core/components/badge/stories/img/TableOfOptions.png"
+import Layout from "../../../../../../../../core/components/badge/stories/img/Layout.png"
+import Accessibility from "../../../../../../../../core/components/badge/stories/img/Accessibility.png"
 
-import "../../../../.storybook/template/style/police.css";
+import "../../../../../../../.storybook/template/style/police.css";
 
 <Meta title="Components/Badge" />
 
