feat: add IconTitle component and integrate into various stories

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/badge/stories/badge.mdx
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/badge/stories/badge.mdx
@@ -2,6 +2,7 @@ import { Meta } from "@storybook/blocks";
 
 import StorybookTabs from "../../../../../../../.storybook/template/StorybookTabs";
 import HeaderComponent from "../../../../../../../.storybook/template/HeaderComponent/HeaderComponent";
+import IconTitle from "../../../../../../../.storybook/template/IconTitle/IconTitle";
 
 import BadgeTypes from "../../../../../../../../core/components/badge/stories/img/BadgeTypes.png"
 import Taille from "../../../../../../../../core/components/badge/stories/img/Taille.png"
