--- a/packages/angular/projects/ds-rte-lib/src/lib/components/tag/stories/tag.mdx
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/tag/stories/tag.mdx
@@ -2,6 +2,7 @@ import { Meta } from "@storybook/blocks";
 
 import StorybookTabs from "../../../../../../../.storybook/template/StorybookTabs";
 import HeaderComponent from "../../../../../../../.storybook/template/HeaderComponent/HeaderComponent";
+import IconTitle from "../../../../../../../.storybook/template/IconTitle/IconTitle";
 
 import TagTypes from "../../../../../../../../core/components/tag/stories/img/TagTypes.png"
 import TagTaille from "../../../../../../../../core/components/tag/stories/img/TagTaille.png"
