--- a/packages/react/src/components/badge/stories/Badge.mdx
+++ b/packages/react/src/components/badge/stories/Badge.mdx
@@ -3,6 +3,7 @@ import React from "react";
 
 import StorybookTabs from "../../../../.storybook/template/StorybookTabs";
 import HeaderComponent from "../../../../.storybook/template/HeaderComponent/HeaderComponent";
+import IconTitle from "../../../../.storybook/template/IconTitle/IconTitle";
 
 import BadgeTypes from "../../../../../core/components/badge/stories/img/BadgeTypes.png"
 import Taille from "../../../../../core/components/badge/stories/img/Taille.png"
