--- a/packages/react/src/components/chip/stories/Chip.mdx
+++ b/packages/react/src/components/chip/stories/Chip.mdx
@@ -2,7 +2,8 @@ import { Meta } from "@storybook/blocks";
 import React from "react";
 
 import StorybookTabs from "../../../../.storybook/template/StorybookTabs";
-import HeaderComponent from "../../../../.storybook/template/HeaderComponent/HeaderComponent";import "../../../../.storybook/template/style/police.css";
+import HeaderComponent from "../../../../.storybook/template/HeaderComponent/HeaderComponent";
+import IconTitle from "../../../../.storybook/template/IconTitle/IconTitle";import "../../../../.storybook/template/style/police.css";
 
 import ChipsTypes from "../../../../../core/components/chip/stories/img/ChipsTypes.png"
 import ChipsTaille from "../../../../../core/components/chip/stories/img/ChipsTaille.png"
