--- a/packages/react/src/components/segmentedControl/stories/SegmenteedControl.mdx
+++ b/packages/react/src/components/segmentedControl/stories/SegmenteedControl.mdx
@@ -3,6 +3,7 @@ import React from "react";
 
 import StorybookTabs from "../../../../.storybook/template/StorybookTabs";
 import HeaderComponent from "../../../../.storybook/template/HeaderComponent/HeaderComponent";
+import IconTitle from "../../../../.storybook/template/IconTitle/IconTitle";
 
 import SegControlAccessibility from "../../../../../core/components/segmented-control/stories/img/SegControlAccessibility.png";
 import SegControlAnimations from "../../../../../core/components/segmented-control/stories/img/SegControlAnimations.png";
@@ -59,7 +60,7 @@ import "../../../../.storybook/template/style/police.css";
 
     <h2 id="guidelines" className="h2" style={{border:"none", fontFamily:"Nunito", color:"#2964A0"}} > Usages </h2>
 
-    <h3 id="preconisations" className="h3" style={{fontFamily:"Nunito"}}> Préconisations : </h3>
+    <IconTitle id="préconisation" icon="heart" title="Préconisation" />
     <p>Les principales règles qui entourent l'utilisation du composant :</p>
 
     <p className="no-margin-bottom">Utiliser pour des choix exclusifs simples</p>
