--- a/packages/react/src/components/switch/stories/Switch.mdx
+++ b/packages/react/src/components/switch/stories/Switch.mdx
@@ -3,6 +3,7 @@ import React from "react";
 
 import StorybookTabs from "../../../../.storybook/template/StorybookTabs";
 import HeaderComponent from "../../../../.storybook/template/HeaderComponent/HeaderComponent";
+import IconTitle from "../../../../.storybook/template/IconTitle/IconTitle";
 
 import SwitchAccessibility from "../../../../../core/components/switch/stories/img/SwitchAccessibility.png";
 import SwitchAnimations from "../../../../../core/components/switch/stories/img/SwitchAnimations.png";
@@ -59,6 +60,7 @@ Composant générique pouvant être utilisé par toutes les équipes de la DSIT.
 
     <h2 id="guidelines" className="h2" style={{border:"none", fontFamily:"Nunito", color:"#2964A0"}} > Usages </h2>
 
+    <IconTitle id="préconisation" icon="heart" title="Préconisation" />
     <p>Utiliser un switch uniquement pour des <b>actions instantanées</b> (ex : activer les notifications).</p>
 
     <p className="no-margin-bottom">Distinction avec la checkbox</p>
