--- a/packages/react/src/components/tag/stories/Tag.mdx
+++ b/packages/react/src/components/tag/stories/Tag.mdx
@@ -3,6 +3,7 @@ import React from "react";
 
 import StorybookTabs from "../../../../.storybook/template/StorybookTabs";
 import HeaderComponent from "../../../../.storybook/template/HeaderComponent/HeaderComponent";
+import IconTitle from "../../../../.storybook/template/IconTitle/IconTitle";
 
 import TagTypes from "../../../../../core/components/tag/stories/img/TagTypes.png"
 import TagTaille from "../../../../../core/components/tag/stories/img/TagTaille.png"
