--- a/packages/angular/projects/ds-rte-lib/src/lib/components/chip/stories/chip.mdx
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/chip/stories/chip.mdx
@@ -2,6 +2,7 @@ import { Meta } from "@storybook/blocks";
 
 import StorybookTabs from "../../../../../../../.storybook/template/StorybookTabs";
 import HeaderComponent from "../../../../../../../.storybook/template/HeaderComponent/HeaderComponent";
+import IconTitle from "../../../../../../../.storybook/template/IconTitle/IconTitle";
 
 import ChipsTypes from "../../../../../../../../core/components/chip/stories/img/ChipsTypes.png"
 import ChipsTaille from "../../../../../../../../core/components/chip/stories/img/ChipsTaille.png"
