--- a/packages/angular/projects/ds-rte-lib/src/lib/components/divider/stories/divider.mdx
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/divider/stories/divider.mdx
@@ -2,6 +2,7 @@ import { Meta } from "@storybook/blocks";
 
 import StorybookTabs from "../../../../../../../.storybook/template/StorybookTabs";
 import HeaderComponent from "../../../../../../../.storybook/template/HeaderComponent/HeaderComponent";
+import IconTitle from "../../../../../../../.storybook/template/IconTitle/IconTitle";
 
 import DividerAccessibility from "../../../../../../../../core/components/divider/stories/img/DividerAccessibility.png"
 import DividerBehaviors from "../../../../../../../../core/components/divider/stories/img/DividerBehaviors.png"
@@ -49,7 +50,7 @@ import "../../../../../../../.storybook/template/style/police.css";
 
         <h2 id="guidelines" className="h2" style={{border:"none", fontFamily:"Nunito", color:"#2964A0"}} > Usages </h2>
 
-        <h3 id="Preconisations" className="h3" style={{fontFamily:"Nunito"}}> Préconisations : </h3>
+        <IconTitle id="préconisation" icon="heart_outlined" title="Préconisation" />
 
         <p> Les principales règles qui entourent l'utilisation du composant :</p>
 
