--- a/packages/angular/projects/ds-rte-lib/src/lib/components/switch/stories/switch.mdx
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/switch/stories/switch.mdx
@@ -1,6 +1,7 @@
 import { Meta } from "@storybook/blocks";
 import StorybookTabs from "../../../../../../../.storybook/template/StorybookTabs";
 import HeaderComponent from "../../../../../../../.storybook/template/HeaderComponent/HeaderComponent";
+import IconTitle from "../../../../../../../.storybook/template/IconTitle/IconTitle";
 
 import SwitchAccessibility from "../../../../../../../../core/components/switch/stories/img/SwitchAccessibility.png";
 import SwitchAnimations from "../../../../../../../../core/components/switch/stories/img/SwitchAnimations.png";
@@ -56,6 +57,8 @@ Composant générique pouvant être utilisé par toutes les équipes de la DSIT.
 <div className="Guidelines">
 
     <h2 id="guidelines" className="h2" style={{border:"none", fontFamily:"Nunito", color:"#2964A0"}} > Usages </h2>
+
+    <IconTitle id="préconisation" icon="heart_outlined" title="Préconisation" />
 
     <p>Utiliser un switch uniquement pour des <b>actions instantanées</b> (ex : activer les notifications).</p>
 
