--- a/packages/react/src/components/divider/stories/Divider.mdx
+++ b/packages/react/src/components/divider/stories/Divider.mdx
@@ -3,6 +3,7 @@ import React from "react";
 
 import StorybookTabs from "../../../../.storybook/template/StorybookTabs";
 import HeaderComponent from "../../../../.storybook/template/HeaderComponent/HeaderComponent";
+import IconTitle from "../../../../.storybook/template/IconTitle/IconTitle";
 
 import DividerAccessibility from "../../../../../core/components/divider/stories/img/DividerAccessibility.png"
 import DividerBehaviors from "../../../../../core/components/divider/stories/img/DividerBehaviors.png"
@@ -50,7 +51,7 @@ import "../../../../.storybook/template/style/police.css";
 
         <h2 id="guidelines" className="h2" style={{border:"none", fontFamily:"Nunito", color:"#2964A0"}} > Usages </h2>
 
-        <h3 id="Preconisations" className="h3" style={{fontFamily:"Nunito"}}> Préconisations : </h3>
+        <IconTitle id="préconisation" icon="heart" title="Préconisation" />
 
         <p> Les principales règles qui entourent l'utilisation du composant :</p>
 
