--- a/packages/react/src/components/loader/stories/Loader.mdx
+++ b/packages/react/src/components/loader/stories/Loader.mdx
@@ -3,6 +3,7 @@ import React from "react";
 
 import StorybookTabs from "../../../../.storybook/template/StorybookTabs";
 import HeaderComponent from "../../../../.storybook/template/HeaderComponent/HeaderComponent";
+import IconTitle from "../../../../.storybook/template/IconTitle/IconTitle";
 
 import LoaderAccessibility from "../../../../../core/components/loader/stories/img/LoaderAccessibility.png";
 import LoaderAppearance from "../../../../../core/components/loader/stories/img/LoaderAppearance.png";
@@ -56,7 +57,7 @@ import "../../../../.storybook/template/style/police.css";
 
     <h2 id="guidelines" className="h2" style={{border:"none", fontFamily:"Nunito", color:"#2964A0"}} > Usages </h2>
 
-    <h3 id="préconisations" className="h3" style={{fontFamily:"Nunito"}}> Préconisations : </h3>
+    <IconTitle id="préconisation" icon="heart" title="Préconisation" />
 
     <p>Les principales règles qui entourent l'utilisation du composant :</p>
 
