feat: update accessibility heading styles in Badge component stories

--- a/packages/react/src/components/badge/stories/Badge.mdx
+++ b/packages/react/src/components/badge/stories/Badge.mdx
@@ -168,7 +168,7 @@ import "../../../../.storybook/template/style/police.css";
 
     <div className="Accessibility">
 
-        <h2 className="h2" id="accessibility-testing-status" style={{border:"none", fontFamily:"Nunito"}}> Accessibility Testing Status </h2>
+        <h2 id="accessibilityTestingStatus" className="h2" style={{border:"none", fontFamily:"Nunito", color:"#2964A0"}} > Accessibility Testing Status </h2>
 
         <p> Voici les tests à effectuer pour vérifier l’accessibilité de chaque catégorie : </p>
 
